syntax = "proto3";

package co.topl.grpc.models;

message VerificationKey {
  oneof sealed_value {
    VerificationKeyCurve25519 curve25519 = 1;
    VerificationKeyEd25519 ed25519 = 2;
    VerificationKeyExtendedEd25519 extendedEd25519 = 3;
    VerificationKeyVrfEd25519 vrfEd25519 = 4;
    VerificationKeyKesProduct kesProduct = 5;
  }
}

message VerificationKeyCurve25519 {
  bytes value = 1;
}

message VerificationKeyEd25519 {
  bytes value = 1;
}

message VerificationKeyExtendedEd25519 {
  VerificationKeyEd25519 vk = 1;
  bytes chainCode = 2;
}

message VerificationKeyVrfEd25519 {
  bytes value = 1;
}

message VerificationKeyKesProduct {
  bytes value = 1;
  int32 step = 2;
}
